--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-            background: #000;
-            color: #fff;
+            background: #f5f5f7;
+            color: #1d1d1f;
             overflow-x: hidden;
         }
 
@@ -25,10 +25,11 @@
             width: 100%;
             backdrop-filter: blur(20px);
             -webkit-backdrop-filter: blur(20px);
-            background: rgba(0, 0, 0, 0.8);
+            background: rgba(255, 255, 255, 0.8);
             z-index: 1000;
             padding: 1rem 0;
             transition: all 0.3s ease;
+            box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
         }
 
         .nav-container {
@@ -43,7 +44,7 @@
         .logo {
             font-size: 1.5rem;
             font-weight: 600;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #ff2d55, #ff9500, #ffcc00, #34c759, #5856d6, #007aff);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
@@ -56,7 +57,7 @@
         }
 
         .nav-links a {
-            color: #fff;
+            color: #1d1d1f;
             text-decoration: none;
             font-weight: 400;
             transition: all 0.3s ease;
@@ -64,7 +65,7 @@
         }
 
         .nav-links a:hover {
-            color: #667eea;
+            color: #007aff;
             transform: translateY(-2px);
         }
 
@@ -75,7 +76,7 @@
             align-items: center;
             justify-content: center;
             text-align: center;
-            background: radial-gradient(ellipse at center, #1a1a2e 0%, #000 70%);
+            background: radial-gradient(ellipse at center, #f5f5f7 0%, #e5e5e7 70%);
             position: relative;
             overflow: hidden;
         }
@@ -85,7 +86,7 @@
             position: absolute;
             width: 200%;
             height: 200%;
-            background: linear-gradient(45deg, transparent 30%, rgba(102, 126, 234, 0.1) 50%, transparent 70%);
+            background: linear-gradient(45deg, transparent 30%, rgba(0, 122, 255, 0.1) 50%, transparent 70%);
             animation: rotate 20s linear infinite;
         }
 
@@ -103,7 +104,7 @@
             font-size: clamp(3rem, 8vw, 6rem);
             font-weight: 700;
             margin-bottom: 1rem;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #ff2d55, #ff9500, #ffcc00, #34c759, #5856d6, #007aff);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
@@ -112,7 +113,7 @@
 
         .hero p {
             font-size: clamp(1.2rem, 3vw, 1.8rem);
-            color: #ccc;
+            color: #86868b;
             margin-bottom: 2rem;
             animation: fadeInUp 1s ease-out 0.3s both;
         }
@@ -120,19 +121,19 @@
         .cta-button {
             display: inline-block;
             padding: 1rem 2rem;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #007aff, #5856d6);
             color: white;
             text-decoration: none;
             border-radius: 50px;
             font-weight: 600;
             transition: all 0.3s ease;
             animation: fadeInUp 1s ease-out 0.6s both;
-            box-shadow: 0 10px 30px rgba(102, 126, 234, 0.3);
+            box-shadow: 0 10px 30px rgba(0, 122, 255, 0.3);
         }
 
         .cta-button:hover {
             transform: translateY(-3px);
-            box-shadow: 0 20px 40px rgba(102, 126, 234, 0.4);
+            box-shadow: 0 20px 40px rgba(0, 122, 255, 0.4);
         }
 
         @keyframes fadeInUp {
@@ -151,6 +152,12 @@
             padding: 6rem 2rem;
             max-width: 1000px;
             margin: 0 auto;
+            background: rgba(255, 255, 255, 0.8);
+            backdrop-filter: blur(10px);
+            -webkit-backdrop-filter: blur(10px);
+            border-radius: 20px;
+            box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+            margin-bottom: 2rem;
         }
 
         .section-title {
@@ -158,7 +165,7 @@
             font-weight: 700;
             text-align: center;
             margin-bottom: 3rem;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #ff2d55, #ff9500, #ffcc00, #34c759, #5856d6, #007aff);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
@@ -175,20 +182,20 @@
         .about-text {
             font-size: 1.1rem;
             line-height: 1.8;
-            color: #ccc;
+            color: #1d1d1f;
         }
 
         .about-image {
             width: 100%;
             height: 400px;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #007aff, #5856d6);
             border-radius: 20px;
             display: flex;
             align-items: center;
             justify-content: center;
             font-size: 4rem;
             color: white;
-            box-shadow: 0 20px 40px rgba(102, 126, 234, 0.3);
+            box-shadow: 0 20px 40px rgba(0, 122, 255, 0.3);
         }
 
         /* Skills Section */
@@ -199,25 +206,27 @@
         }
 
         .skill-card {
-            background: rgba(255, 255, 255, 0.05);
+            background: rgba(255, 255, 255, 0.8);
             backdrop-filter: blur(10px);
-            border: 1px solid rgba(255, 255, 255, 0.1);
+            -webkit-backdrop-filter: blur(10px);
+            border: 1px solid rgba(255, 255, 255, 0.2);
             border-radius: 20px;
             padding: 2rem;
             text-align: center;
             transition: all 0.3s ease;
+            box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
         }
 
         .skill-card:hover {
             transform: translateY(-10px);
-            box-shadow: 0 20px 40px rgba(102, 126, 234, 0.2);
-            border-color: rgba(102, 126, 234, 0.3);
+            box-shadow: 0 20px 40px rgba(0, 122, 255, 0.2);
+            border-color: rgba(0, 122, 255, 0.3);
         }
 
         .skill-icon {
             width: 60px;
             height: 60px;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #007aff, #5856d6);
             border-radius: 15px;
             margin: 0 auto 1rem;
             display: flex;
@@ -229,11 +238,11 @@
         .skill-card h3 {
             font-size: 1.3rem;
             margin-bottom: 1rem;
-            color: #fff;
+            color: #1d1d1f;
         }
 
         .skill-card p {
-            color: #ccc;
+            color: #86868b;
             line-height: 1.6;
         }
 
@@ -245,22 +254,24 @@
         }
 
         .project-card {
-            background: rgba(255, 255, 255, 0.05);
+            background: rgba(255, 255, 255, 0.8);
             backdrop-filter: blur(10px);
-            border: 1px solid rgba(255, 255, 255, 0.1);
+            -webkit-backdrop-filter: blur(10px);
+            border: 1px solid rgba(255, 255, 255, 0.2);
             border-radius: 20px;
             overflow: hidden;
             transition: all 0.3s ease;
+            box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
         }
 
         .project-card:hover {
             transform: translateY(-10px);
-            box-shadow: 0 20px 40px rgba(102, 126, 234, 0.2);
+            box-shadow: 0 20px 40px rgba(0, 122, 255, 0.2);
         }
 
         .project-image {
             height: 200px;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #007aff, #5856d6);
             display: flex;
             align-items: center;
             justify-content: center;
@@ -275,24 +286,24 @@
         .project-content h3 {
             font-size: 1.3rem;
             margin-bottom: 1rem;
-            color: #fff;
+            color: #1d1d1f;
         }
 
         .project-content p {
-            color: #ccc;
+            color: #86868b;
             line-height: 1.6;
             margin-bottom: 1.5rem;
         }
 
         .project-link {
-            color: #667eea;
+            color: #007aff;
             text-decoration: none;
             font-weight: 600;
             transition: all 0.3s ease;
         }
 
         .project-link:hover {
-            color: #764ba2;
+            color: #5856d6;
         }
 
         /* Contact Section */
@@ -314,13 +325,13 @@
             display: flex;
             align-items: center;
             gap: 0.5rem;
-            color: #ccc;
+            color: #86868b;
             text-decoration: none;
             transition: all 0.3s ease;
         }
 
         .contact-item:hover {
-            color: #667eea;
+            color: #007aff;
             transform: translateY(-3px);
         }
 
@@ -328,8 +339,8 @@
         footer {
             text-align: center;
             padding: 2rem;
-            color: #666;
-            border-top: 1px solid rgba(255, 255, 255, 0.1);
+            color: #86868b;
+            border-top: 1px solid rgba(0, 0, 0, 0.1);
         }
 
         /* Mobile Responsiveness */
@@ -354,6 +365,10 @@
             scroll-behavior: smooth;
         }
     </style>
+
+    <!-- Add AOS (Animate On Scroll) library -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 </head>
 <body>
     <!-- Navigation -->
@@ -381,7 +396,7 @@
     </section>
 
     <!-- About Section -->
-    <section id="about">
+    <section id="about" data-aos="fade-up">
         <h2 class="section-title">About Me</h2>
         <div class="about-content">
             <div class="about-text">
@@ -396,35 +411,35 @@
     </section>
 
     <!-- Skills Section -->
-    <section id="skills">
+    <section id="skills" data-aos="fade-up">
         <h2 class="section-title">Skills</h2>
         <div class="skills-grid">
-            <div class="skill-card">
+            <div class="skill-card" data-aos="fade-up" data-aos-delay="100">
                 <div class="skill-icon">🤖</div>
                 <h3>AI & Machine Learning</h3>
                 <p>Expertise in LSTM, CNN, KNN, Linear Regression, and Random Forests. Proficient with TensorFlow for building predictive models.</p>
             </div>
-            <div class="skill-card">
+            <div class="skill-card" data-aos="fade-up" data-aos-delay="200">
                 <div class="skill-icon">📱</div>
                 <h3>Swift Development</h3>
                 <p>Building iOS applications using Swift, SwiftUI, UIKit, Core Data, and following Apple's Human Interface Guidelines.</p>
             </div>
-            <div class="skill-card">
+            <div class="skill-card" data-aos="fade-up" data-aos-delay="300">
                 <div class="skill-icon">💻</div>
                 <h3>Programming</h3>
                 <p>Proficient in Swift, Python, C++, C#, Java, Objective-C, and HTML with strong foundation in Data Structures & Algorithms.</p>
             </div>
-            <div class="skill-card">
+            <div class="skill-card" data-aos="fade-up" data-aos-delay="400">
                 <div class="skill-icon">📊</div>
                 <h3>Financial Analytics</h3>
                 <p>Stock market analysis, actuarial sciences, and building predictive models for financial data using Python libraries.</p>
             </div>
-            <div class="skill-card">
+            <div class="skill-card" data-aos="fade-up" data-aos-delay="500">
                 <div class="skill-icon">🎤</div>
                 <h3>Leadership & Communication</h3>
                 <p>Public speaking, event management, content creation, and leading teams. Award-winning reporter and anchor.</p>
             </div>
-            <div class="skill-card">
+            <div class="skill-card" data-aos="fade-up" data-aos-delay="600">
                 <div class="skill-icon">📱</div>
                 <h3>Social Media Management</h3>
                 <p>Creating marketing campaigns, managing social media presence, and organizing sponsored events for tech communities.</p>
@@ -433,24 +448,24 @@
     </section>
 
     <!-- Achievements Section -->
-    <section id="achievements">
+    <section id="achievements" data-aos="fade-up">
         <h2 class="section-title">Achievements & Experience</h2>
         <div class="skills-grid">
-            <div class="skill-card">
+            <div class="skill-card" data-aos="fade-up" data-aos-delay="100">
                 <div class="skill-icon">🏆</div>
                 <h3>Awards</h3>
                 <p>• Best Reporter Award (1st prize) - PPSMUN 2019<br>
                 • Best Reporter Award (1st prize) - AMIMUN 2023<br>
                 • 3rd position - Nexus Spark Ideathon 2023</p>
             </div>
-            <div class="skill-card">
+            <div class="skill-card" data-aos="fade-up" data-aos-delay="200">
                 <div class="skill-icon">📜</div>
                 <h3>Certifications</h3>
                 <p>• NPTEL Software Testing Certification - IIT Kharagpur<br>
                 • CS50 Certification - Harvard University<br>
                 • Specialized in AI/ML through academic coursework</p>
             </div>
-            <div class="skill-card">
+            <div class="skill-card" data-aos="fade-up" data-aos-delay="300">
                 <div class="skill-icon">👥</div>
                 <h3>Leadership</h3>
                 <p>• Socials Lead at AAIC (2023-24)<br>
@@ -461,10 +476,10 @@
     </section>
 
     <!-- Projects Section -->
-    <section id="projects">
+    <section id="projects" data-aos="fade-up">
         <h2 class="section-title">Featured Projects</h2>
         <div class="projects-grid">
-            <div class="project-card">
+            <div class="project-card" data-aos="fade-up" data-aos-delay="100">
                 <div class="project-image">📅</div>
                 <div class="project-content">
                     <h3>DSAM - Daily Scheduler App Manager</h3>
@@ -472,7 +487,7 @@
                     <a href="https://github.com/Arihant-Marwaha" class="project-link">View on GitHub →</a>
                 </div>
             </div>
-            <div class="project-card">
+            <div class="project-card" data-aos="fade-up" data-aos-delay="200">
                 <div class="project-image">📈</div>
                 <div class="project-content">
                     <h3>Stock Market Predictor</h3>
@@ -480,7 +495,7 @@
                     <a href="https://github.com/Arihant-Marwaha" class="project-link">View on GitHub →</a>
                 </div>
             </div>
-            <div class="project-card">
+            <div class="project-card" data-aos="fade-up" data-aos-delay="300">
                 <div class="project-image">🏛️</div>
                 <div class="project-content">
                     <h3>Actuarial Sciences Research</h3>
@@ -492,7 +507,7 @@
     </section>
 
     <!-- Contact Section -->
-    <section id="contact">
+    <section id="contact" data-aos="fade-up">
         <h2 class="section-title">Get In Touch</h2>
         <div class="contact-content">
             <p>I'm always excited to discuss new opportunities in AI/ML, Swift development, or collaborative projects. Let's connect and build something amazing together!</p>
@@ -537,9 +552,9 @@
         window.addEventListener('scroll', () => {
             const nav = document.querySelector('nav');
             if (window.scrollY > 100) {
-                nav.style.background = 'rgba(0, 0, 0, 0.95)';
+                nav.style.background = 'rgba(255, 255, 255, 0.95)';
             } else {
-                nav.style.background = 'rgba(0, 0, 0, 0.8)';
+                nav.style.background = 'rgba(255, 255, 255, 0.8)';
             }
         });
 
@@ -564,6 +579,11 @@
             section.style.transform = 'translateY(50px)';
             section.style.transition = 'all 0.8s ease-out';
             observer.observe(section);
+        });
+
+        AOS.init({
+            duration: 1000,
+            once: true,
         });
     </script>
 </body>
